[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "jsonpointer-helpers"
version = "0.3.0-alpha.0"
description = "JSON Pointer helpers"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/jsonpointer-helpers"
repository = "https://github.com/Gr1N/jsonpointer-helpers"

keywords = ["json", "jsonpointer", "rfc6901"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-bugbear = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
tox = "^3.0.0"
